# plover_retro_text_transform

./: setup.cfg
plover_retro_text_format/: __init__.py
