[metadata]
name = plover_retro_text_format
version = 0.2.0
description = Change format of text, retrospectively
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/BenediktHofirek/plover_retro_text_format
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages =
  plover_retro_text_format

[options.entry_points]
plover.meta =
    retro_title = plover_retro_text_format:retro_title
    retro_upper = plover_retro_text_format:retro_upper
    retro_lower = plover_retro_text_format:retro_lower
    retro_camel = plover_retro_text_format:retro_camel
    retro_pascal = plover_retro_text_format:retro_pascal
    retro_snake = plover_retro_text_format:retro_snake
    retro_screaming = plover_retro_text_format:retro_screaming
    retro_kebab = plover_retro_text_format:retro_kebab
